force-app/main/default/objects/ucinn_ascendv2__Package_Extensions__c/ucinn_ascendv2__Package_Extensions__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Package Extensions</label>
</CustomObject>