force-app/main/default/objects/ucinn_ascendv2__Package_Extensions__c/fields/ucinn_ascendv2__Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Apex_Class_Name__c</fullName>
    <label>Apex Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>