force-app/main/default/objects/ucinn_ascendv2__Package_Extensions__c/fields/ucinn_ascendv2__Namespace__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Namespace__c</fullName>
    <label>Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>